[package]
name = "distributions"
version = "0.1.0"
authors = ["Graham Dennis <graham.dennis@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/GrahamDennis/distributions-rs"
homepage = "https://github.com/GrahamDennis/distributions-rs"
keywords = ["random", "rng"]
description = """
Random number distributions for use with `rand`.
"""

[dependencies]
rand = "0.3"
num = "0.1"
